[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/21141.jpg" type="Texture" id=1]
[ext_resource path="res://assets/fonts/NerkoOneButtonFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/music/awesomeness.ogg" type="AudioStream" id=3]
[ext_resource path="res://scripts/Login.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Nerko_One/NerkoOne-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 31
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 343.183, 364.886 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTR" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameEdit" type="LineEdit" parent="."]
anchor_left = 0.3
anchor_top = 0.4
anchor_right = 0.7
anchor_bottom = 0.4
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "Ingresa tu nombre"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.45
anchor_right = 0.6
anchor_bottom = 0.5
margin_left = -21.2855
margin_top = 13.4695
margin_right = 35.7145
margin_bottom = 43.4695
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Registrarse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="."]
anchor_left = 0.25
anchor_top = 0.7
anchor_right = 0.75
anchor_bottom = 0.7
margin_left = -154.587
margin_top = -498.409
margin_right = 152.413
margin_bottom = -268.409
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.141176, 0.494118, 0.54902, 1 )
text = "Compite con tus amigos para ver quién
logra bajar más rápidamente por la pista."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions2" type="Label" parent="."]
anchor_left = 0.25
anchor_top = 0.7
anchor_right = 0.75
anchor_bottom = 0.7
margin_left = -151.591
margin_top = -93.8663
margin_right = 155.409
margin_bottom = 136.134
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.141176, 0.494118, 0.54902, 1 )
text = "
Para controlar tu dirección, mueve el mouse
o toca las secciones
laterales de la pantalla  de tu teléfono."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="LoadingScreen" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingLabel" type="Label" parent="LoadingScreen"]
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.6
custom_fonts/font = ExtResource( 2 )
text = "Loading..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="NameEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
